cut blog over to docsy and add k6 article

--- a/content/en/blog/k6.md
+++ b/content/en/blog/k6.md
@@ -1,16 +1,20 @@
 ---
 title: "K6"
 date: 2022-10-22T09:45:54-05:00
-draft: true
+draft: false
+Tags:
+- testing
+Categories: []
+DisableComments: false
 ---
 
-# K6 Summary
+## Summary
 
 Over the years, HTTP driven benchmark testing has seen many contenders come and go. Tools in this space include `siege`, `apache bench`, `bees with machine guns`, and many more. These sorts of tests are not only great for load testing, but they also can be used to help find bottlenecks in web application stacks, stress monitoring and observability tools, and can be used for chaos and reliabiity testing.
 
 Recently, one contender from a prominent observability company has risen above the rest to become one of the defacto load testing tools. [Grafana's K6](https://k6.io/) is an open source, extensible load testing tool. Find it on [github](https://github.com/grafana/k6) if you'd like to browse the source. The tests are driven by javascript scripts and the k6 testing tool.
 
-# Installation
+## Installation
 
 If you'd like to follow along with this article, first install the k6 binary locally, or pull the container. You can find the official installation docs upstream at [https://k6.io/docs/getting-started/installation/](https://k6.io/docs/getting-started/installation/)
 
@@ -38,7 +42,7 @@ Docker:
 docker pull grafana/k6
 ```
 
-# Getting started
+## Getting started
 
 k6 works by loading javascript source containing an exported default function, then it runs that function. Let's take a look at the given example for a [single request](https://k6.io/docs/examples/single-request/). I've saved this locally as `main.js` and pointed it to a domain that I own. Using this file now, we can run a basic test by running:
 
@@ -94,7 +98,7 @@ ERRO[0181] some thresholds have failed
 Let's break down the parts of the `single-request` example to see what we can extrapolate from it:
 
 
-## Metrics
+### Metrics
 
 `k6` comes with a few built in metrics types. In the `single-request` example, we can see the `Counter` metric in action:
 
@@ -106,7 +110,7 @@ This `requests` object is built from the `Counter` object comes from the `k6` li
 
 [https://k6.io/docs/javascript-api/#k6-metrics](https://k6.io/docs/javascript-api/#k6-metrics)
 
-## Test Options
+### Test Options
 
 The next portion of the `single-request` example showcases the test options. You can find an extensive guide to these options in the [upstream documentation](https://k6.io/docs/using-k6/k6-options/). Let's take a look:
 
@@ -143,7 +147,7 @@ There are a plethora of thresholds available for `k6`, so see more at the upstre
 
 [https://k6.io/docs/using-k6/thresholds/](https://k6.io/docs/using-k6/thresholds/)
 
-## The business
+### The business
 
 Finally, let's analyze the function that defines the behavior of our test:
 
@@ -165,7 +169,7 @@ export default function () {
 
 This test makes it's request to `test.k6.io`, then sleeps for 1 second, then checks the status and response body of the request. If the response code is 200, and the body contains the string `Feel free to browse`, then we have a successful request! 
 
-# Review
+## Review
 
 So now that we hopefully understand the test breakdown, we should be able to shape this test into something meaningful for testing a single endpoint's throughput. In the following example, we test that running 10 VUs for 1 minute with a 200ms sleep time should produce `10 * (60/.002) = 3000 total requests`. In my case, I'm testing this blog, so these configurations are spefic to my usecase.
 
@@ -244,7 +248,7 @@ default ✓ [======================================] 00/10 VUs  1m0s
      vus_max........................: 10      min=10       max=10
 ```
 
-# Thoughts on implementation
+## Thoughts on implementation
 
 These days with the proliferation of CNCF tooling, higher throughputs for testing can be easily achieved by spreading these client tests across several gigabit internet connections by leveraging something like [DigitalOcean's Managed Kubernetes](https://www.digitalocean.com/products/kubernetes) offering.
 
