update k6 example for random post data example

--- a/content/en/blog/k6.md
+++ b/content/en/blog/k6.md
@@ -248,6 +248,60 @@ default ✓ [======================================] 00/10 VUs  1m0s
      vus_max........................: 10      min=10       max=10
 ```
 
+## Examples
+
+### Post random data to URL
+
+```javascript
+import http from 'k6/http';
+import { sleep, check } from 'k6';
+import { Counter } from 'k6/metrics';
+import { randomItem } from 'https://jslib.k6.io/k6-utils/1.2.0/index.js';
+
+export const requests = new Counter('http_reqs');
+
+export const options = {
+  stages: [
+    { target: 1, duration: '1m' },
+  ],
+  thresholds: {
+    http_reqs: ['count >= 3000'],
+  },
+};
+
+export default function () {
+  const payloads = [
+    "foo",
+    "bar",
+    "baz",
+    "qux"
+  ]
+
+  let data = {
+    data: randomItem(payloads),
+  }
+
+  let res = http.post("http://address.tld:12345", JSON.stringify(data), {
+    headers: { 'Content-Type': 'application/json' },
+    timeout: '120s'
+  });
+  sleep(5);
+  
+  const checkRes = check(res, {
+    'status is 200': (r) => r.status === 200,
+  });
+}
+```
+
+## Reference 
+
+|Title|Link|
+|-|-|
+|Load testing for openapis|https://k6.io/blog/load-testing-your-api-with-swagger-openapi-and-k6/|
+|Error handling|https://k6.io/docs/javascript-api/jslib/k6chaijs/error-handling/|
+|failure checking|https://k6.io/docs/javascript-api/k6/fail/|
+|Env vars|https://k6.io/docs/using-k6/environment-variables/|
+
 ## Thoughts on implementation
 
 These days with the proliferation of CNCF tooling, higher throughputs for testing can be easily achieved by spreading these client tests across several gigabit internet connections by leveraging something like [DigitalOcean's Managed Kubernetes](https://www.digitalocean.com/products/kubernetes) offering.
@@ -261,4 +315,3 @@ By creating a configmap and CRD for the test, its easy to deploy your test cases
 # That's all folks
 
 I hope you've enjoyed this short sumary of `k6`. Good luck in your own testing adventures, and if you have any questions, drop them in the `disqus` forum below!
-
